# kubeflow

./: spark-profiler-concept.md  spark_obs.py
docs/: NOTES.md
kubekit-platform-bundle/: README.md  ai-tooling-for-ml-platform.md  platform-library-ideas.md
kubekit-platform-bundle/kubekit-jupyter/: CLAUDE.md  HANDOFF.md  README.md  pyproject.toml
kubekit-platform-bundle/kubekit-jupyter/kubekit_jupyter/: __init__.py  decompile.py  decorators.py  magics.py  pipeline.py  results.py  source.py  standards.py  templates.py  traces.py  validators.py
kubekit-platform-bundle/kubekit-jupyter/tests/: conftest.py  test_decompile.py  test_source.py  test_templates.py  test_validators.py
ultron/task-agents-handoff/: README.md
ultron/task-agents-handoff/implementation-docs/: 00-orchestrator.md  01-data-model.md  02-core-pipeline.md  03-routing-layers.md  04-profiles-and-skills.md  05-memory.md  06-critique.md  07-integration-and-testing.md
ultron/task-agents-handoff/reference-drafts/: README.md  example_pipeline.py
ultron/task-agents-handoff/reference-drafts/classifier/: classifier-prompt.md  classify.py  test_classifier.py
ultron/task-agents-handoff/reference-drafts/critique/: critique-prompt.md  critique.py
ultron/task-agents-handoff/reference-drafts/decomposer/: decompose.py  decomposer-prompt.md
ultron/task-agents-handoff/reference-drafts/memory/: extract_state.py  task_state.py
ultron/task-agents-handoff/reference-drafts/model-selector/: select_model.py  selector-prompt.md  test_selector.py
(+8 files in other folders)
